--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
-aiohttp==3.6.2
+aiohttp==3.7.4.post0
+APScheduler==3.6.3
 async-timeout==3.0.1
-attrs==19.3.0
-certifi==2019.11.28
-cffi==1.13.2
-chardet==3.0.4
-cryptography==2.8
-furl==2.1.0
+attrs==21.2.0
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+furl==2.1.2
 future==0.18.2
-idna==2.8
-multidict==4.7.3
+idna==3.2
+multidict==5.1.0
 orderedmultidict==1.0.1
-pycparser==2.19
-python-telegram-bot==12.2.0
-six==1.13.0
-tornado==6.0.3
-uvloop==0.14.0
-yarl==1.4.2
+pycparser==2.20
+python-telegram-bot==13.5
+pytz==2021.1
+six==1.16.0
+tornado==6.1
+typing-extensions==3.10.0.0
+tzlocal==2.1
+urllib3==1.26.5
+uvloop==0.15.2
+yarl==1.6.3
