--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,14 @@
-aiohttp==3.7.4.post0
-APScheduler==3.6.3
-async-timeout==3.0.1
-attrs==21.2.0
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-cryptography==3.4.7
-furl==2.1.2
-future==0.18.2
-idna==3.2
-multidict==5.1.0
+anyio==3.6.2
+furl==2.1.3
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.23.3
+mccabe==0.7.0
+mypy-extensions==1.0.0
 orderedmultidict==1.0.1
-pycparser==2.20
-python-telegram-bot==13.5
-pytz==2021.1
-six==1.16.0
-tornado==6.1
-typing-extensions==3.10.0.0
-tzlocal==2.1
-urllib3==1.26.5
-uvloop==0.15.2
-yarl==1.6.3
+parso==0.8.3
+pycodestyle==2.10.0
+pyflakes==3.0.1
+python-telegram-bot==20.2
+rfc3986==2.0.0
+sniffio==1.3.0
