--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-anyio==3.6.2
-furl==2.1.3
-h11==0.14.0
-httpcore==0.17.0
-httpx==0.23.3
-mccabe==0.7.0
-mypy-extensions==1.0.0
-orderedmultidict==1.0.1
-parso==0.8.3
-pycodestyle==2.10.0
-pyflakes==3.0.1
-python-telegram-bot==20.2
-rfc3986==2.0.0
-sniffio==1.3.0
+anyio
+certifi
+charset-normalizer
+# fridagram    local repo etec
+furl
+h11
+httpcore
+httpx
+idna
+mccabe
+mypy-extensions
+orderedmultidict
+parso
+pycodestyle
+pyflakes
+python-telegram-bot
+requests
+rfc3986
+setproctitle
+sniffio
+toml
+urllib3
