--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,40 @@
+aiohttp
+aiosignal
 anyio
+async-timeout
+attrs
+autopep8
+black
 certifi
 charset-normalizer
-# fridagram    local repo etec
+click
+flake8
+frozenlist
 furl
+gpg
 h11
 httpcore
 httpx
 idna
+jedi
 mccabe
+multidict
 mypy-extensions
 orderedmultidict
+packaging
 parso
+pathspec
+platformdirs
+pur
 pycodestyle
 pyflakes
-python-telegram-bot
 requests
 rfc3986
+ruff
 setproctitle
+six
 sniffio
 toml
 urllib3
+yapf
+yarl
