--- a/scripts/dachshund.service
+++ b/scripts/dachshund.service
@@ -5,8 +5,7 @@ After=network.target media-nfs-development.mount mongodb.service redis.service
 [Service]
 #Type=forking
 User=stephan
-ExecStart=/home/stephan/.dachshund/dachshundstart.sh
-ExecStop=/home/stephan/.dachshund/dachshundstop.sh
+ExecStart=/home/stephan/.virtualenvs/dachshund/bin/dachshund
 KillMode=process
 
 [Install]
