--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,45 @@
-aiohttp
-aiosignal
-anyio
-async-timeout
-attrs
-autopep8
-black
-certifi
-charset-normalizer
-click
-flake8
-frozenlist
-furl
-gpg
-h11
-httpcore
-httpx
-idna
-jedi
-mccabe
-multidict
-mypy-extensions
-orderedmultidict
-packaging
-parso
-pathspec
-platformdirs
-pur
-pycodestyle
-pyflakes
-requests
-rfc3986
-ruff
-setproctitle
-six
-sniffio
-toml
-urllib3
-yapf
-yarl
+--trusted-host btec.iv.at:8123
+--extra-index-url http://btec.iv.at:8123
+
+aiohappyeyeballs==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
+aiohttp==3.11.18 ; python_version >= "3.11" and python_version < "4.0"
+aiosignal==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
+anyio==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
+async-timeout==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
+attrs==25.3.0 ; python_version >= "3.11" and python_version < "4.0"
+autopep8==2.3.2 ; python_version >= "3.11" and python_version < "4.0"
+black==25.1.0 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2025.4.26 ; python_version >= "3.11" and python_version < "4.0"
+charset-normalizer==3.4.2 ; python_version >= "3.11" and python_version < "4.0"
+click==8.1.8 ; python_version >= "3.11" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
+flake8==7.2.0 ; python_version >= "3.11" and python_version < "4.0"
+fridagram==0.1.16 ; python_version >= "3.11" and python_version < "4.0"
+frozenlist==1.6.0 ; python_version >= "3.11" and python_version < "4.0"
+furl==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
+gpg==1.10.0 ; python_version >= "3.11" and python_version < "4.0"
+h11==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
+httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
+httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.11" and python_version < "4.0"
+mccabe==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
+multidict==6.4.3 ; python_version >= "3.11" and python_version < "4.0"
+mypy-extensions==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
+orderedmultidict==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
+packaging==25.0 ; python_version >= "3.11" and python_version < "4.0"
+parso==0.8.4 ; python_version >= "3.11" and python_version < "4.0"
+pathspec==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
+platformdirs==4.3.8 ; python_version >= "3.11" and python_version < "4.0"
+propcache==0.3.1 ; python_version >= "3.11" and python_version < "4.0"
+pur==7.3.3 ; python_version >= "3.11" and python_version < "4.0"
+pycodestyle==2.13.0 ; python_version >= "3.11" and python_version < "4.0"
+pyflakes==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
+rfc3986==2.0.0 ; python_version >= "3.11" and python_version < "4.0"
+setproctitle==1.3.6 ; python_version >= "3.11" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.11" and python_version < "3.13"
+urllib3==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
+yarl==1.20.0 ; python_version >= "3.11" and python_version < "4.0"
